# carrystar-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
carrystar/: bootstrap.py  config.py  contracts.py  demo_readout.py  email_intake.py  interfaces.py  mail_listener.py  replay.py  seed.py  store.py
carrystar/api/: events.py  main.py  routes.py  state.py
carrystar/engine/: reconcile.py
carrystar/llm/: router.py
carrystar/loop/: merge.py  orchestrator.py
carrystar/parsers/: __init__.py  registry.py
carrystar/seams/: dev_stub.py  registry.py
data/emails/: MANIFEST.json
data/emails/asn-cs0001072883/: BOL ASN 4478423.docx  CS0001072883.xlsx
data/emails/asn-cs0001076816/: BOL ASN 4484190.docx  CS0001076816 ASN4484190.xlsx
data/emails/fashion-nova/: FN BOL 06222026.doc  FN REPORT JUN.22-26.xlsx
data/emails/fred-meyer/: FM SHIPPING KROGER 06-26-26 WH.xlsx  FRED MEYER-JUNE.26.xlsx
data/emails/kohls/: BOL-#810 - FINDLAY OH 6-18-26.docx  BOL-#813 - PATASKALA OH 06-18-26.docx  BOL-#816 - EDGEWOOD, MD 6-18-26.docx  BOL-#826 - DESOTO, TX 06-18-26.docx  BOL-#830 - WINCHESTER VA 6-18-26.docx  (+7 more)
data/synthetic/: BOL_original.docx  BOL_revised.docx  order_export.xlsx
docs/: EMAIL_LISTENER.md  HANDOFF_CODEX.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: make_synthetic_packet.py  send_test_emails.py
tests/: fixtures.py  test_email_intake.py  test_loop_integration.py  test_parsers.py  test_real_pipeline.py  test_reconcile_engine.py  test_store.py
(+7 files in other folders)
