[project]
name = "carrystar-demo"
version = "0.1.0"
description = "Carrystar real-time agent demo — triage / parse / reconcile / propose / human-gated commit over real order emails."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "openpyxl>=3.1",        # store / xlsx mirror (WS-2) + parser (WS-1)
    "python-docx>=1.1",     # BOL parser (WS-1)
    "pdfplumber>=0.11",     # pick-slip parser (WS-1)
    "langgraph>=0.2",       # agent loop state machine (WS-4)
    "litellm>=1.40",        # frontier model routing (WS-4)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carrystar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
